[enh] add max-height and overflow to avoid stupidly long picker

--- a/packages/ng/src/app/select/picker/select-picker.component.scss
+++ b/packages/ng/src/app/select/picker/select-picker.component.scss
@@ -2,6 +2,8 @@
 
 .lu-popover-content {
 	padding: 0;
+	max-height: 240px; // Should be a variable in next iteration
+	overflow-y: auto;
 }
 
 lu-select-picker {
